# aio-pika

./: .coafile  .coveragerc  .coveralls.yml  .deepsource.toml  .drone.yml  .editorconfig  .gitignore  .gray  .readthedocs.yaml  .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  Makefile  README.rst  Untitled.ipynb  gray.conf  noxfile.py  poetry.toml  pylama.ini  pylava.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  ttt.py
.github/workflows/: docs.yml  publish.yml  tests.yml  tox.yml
.pytest_cache/v/cache/: lastfailed  nodeids
aio_pika/: __init__.py  abc.py  adapter.py  channel.py  common.py  compat.py  connection.py  connector.py  exceptions.py  exchange.py  log.py  message.py  pool.py  queue.py  robust_channel.py  robust_connection.py  robust_connection_rrhost.py  robust_exchange.py  robust_queue.py  stream.py  tools.py  transaction.py  types.py  version.py
aio_pika/amqp/: __init__.py  base.py  base.pyx  codec.pyi  codec.pyx  protocol.py
aio_pika/patterns/: __init__.py  base.py  master.py  rpc.py
aio_pika/pika/: __init__.py  amqp_object.py  callback.py  channel.py  connection.py  credentials.py  data.py  frame.py  heartbeat.py  spec.py  utils.py
aio_pika/pika/adapters/: __init__.py  base_connection.py
docs/: Makefile  requirements.txt
docs/source/: apidoc.md  apidoc.rst  conf.py  index.md  index.rst  patterns.md  patterns.rst  quick-start.md  quick-start.rst  see-also.md  url-parameters.md
docs/source/_static/: custom.css
docs/source/_templates/: base.html  layout.html
docs/source/examples/: aiohttp-pubsub.py  amqps-connection.py  benchmark.py  extend-patterns.py  external-credentials.py  fastapi-pubsub.py  log-level-set.py  main.py  master.py  pooling-recycled.py  pooling.py  robust.py  rpc-callee.py  rpc-caller.py  simple_async_consumer.py  simple_consumer.py  simple_publisher.py  simple_publisher_transactions.py  starlette-pubsub.py  tornado-pubsub.py  worker.py
docs/source/rabbitmq-tutorial/: 1-introduction.md  1-introduction.rst  2-work-queues.md  2-work-queues.rst  3-publish-subscribe.md  3-publish-subscribe.rst  4-routing.md  4-routing.rst  5-topics.md  5-topics.rst  6-rpc.md  6-rpc.rst  7-publisher-confirms.md  7-publisher-confirms.rst  index.md  index.rst
docs/source/rabbitmq-tutorial/examples/1-introduction/: receive.py  send.py
docs/source/rabbitmq-tutorial/examples/2-work-queues/: new_task.py  new_task_initial.py  tasks_worker.py  worker.py
docs/source/rabbitmq-tutorial/examples/3-publish-subscribe/: emit_log.py  receive_logs.py
docs/source/rabbitmq-tutorial/examples/4-routing/: emit_log_direct.py  receive_logs_direct.py  receive_logs_direct_simple.py
docs/source/rabbitmq-tutorial/examples/5-topics/: emit_log_topic.py  receive_logs_topic.py
docs/source/rabbitmq-tutorial/examples/6-rpc/: rpc_client.py  rpc_server.py
docs/source/rabbitmq-tutorial/examples/7-publisher-confirms/: publish_asynchronously.py  publish_batches.py  publish_individually.py
tests/: __init__.py  _async_await_cases.py  conftest.py  docker_client.py  tcp_proxy.py  test_amqp.py  test_amqp_robust.py  test_amqp_robust_proxy.py  test_amqp_without_publisher_confirms.py  test_amqp_without_publisher_confirms_robust.py  test_amqps.py  test_connect.py  test_connection_params.py  test_connector.py  test_init.py  test_kwargs.py  test_master.py  test_memory_leak.py  test_memoty_leak.py  test_message.py  test_pool.py  test_robust_amqp.py  test_robust_connection_rrhost.py  test_rpc.py  test_tools.py  test_types.py
