[tool.poetry]
name = "aio-pika"
version = "9.5.6"
description = "Wrapper around the aiormq for asyncio and humans"
authors = ["Dmitry Orlov <me@mosquito.su>"]
readme = "README.rst"
license = "Apache-2.0"
keywords=["rabbitmq", "asyncio", "amqp", "amqp 0.9.1", "aiormq"]
homepage = "https://github.com/mosquito/aio-pika"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
packages = [{ include = "aio_pika" }]

[tool.poetry.urls]
"Source" = "https://github.com/mosquito/aio-pika"
"Tracker" = "https://github.com/mosquito/aio-pika/issues"
"Documentation" = "https://docs.aio-pika.com/"

[tool.poetry.dependencies]
python = "^3.9"
aiormq = "~6.8"
yarl = [{ version = '*'}]
exceptiongroup = [{ version = "^1", python = "< 3.11" }]
typing-extensions = [{ version = '*', python = "< 3.10" }]

[tool.poetry.group.dev.dependencies]
aiomisc = "^17.5"
aiomisc-pytest = "^1.1.1"
collective-checkdocs = "^0.2"
coverage = "^6.5.0"
coveralls = "^3.3.1"
mypy = "^1"
nox = "*"
pylama = "^8.4.1"
pytest = "^8.0"
pytest-cov = "^4.0.0"
pytest-rst = "^0.0"
shortuuid = "^1.0"
sphinx = "*"
sphinx-autobuild = "^2021.3.14"
timeout-decorator = "^0.5.0"
types-setuptools = "^65.6.0.2"
typing-extensions = "*"
setuptools = "^69.0.3"
testcontainers = "^3.7.1"
autodoc = "*"
furo = "*"
sphinxcontrib-googleanalytics = "*"

[tool.poetry.group.uvloop]
optional = true

[tool.poetry.group.uvloop.dependencies]
uvloop = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "aio_pika",
    "tests",
    "docs/source/examples",
    "docs/source/rabbitmq-tutorial/examples/1-introduction",
    "docs/source/rabbitmq-tutorial/examples/2-work-queues",
    "docs/source/rabbitmq-tutorial/examples/3-publish-subscribe",
    "docs/source/rabbitmq-tutorial/examples/4-routing",
    "docs/source/rabbitmq-tutorial/examples/5-topics",
    "docs/source/rabbitmq-tutorial/examples/6-rpc",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = true
addopts = "-p no:asyncio"
markers = [
    "asyncio: asyncio"
]
