[project]
name = "aio-pika"
version = "9.6.0"
description = "Wrapper around the aiormq for asyncio and humans"
authors = [{ name = "Dmitry Orlov", email = "me@mosquito.su" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "rabbitmq",
    "asyncio",
    "amqp",
    "amqp 0.9.1",
    "aiormq",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "aiormq>=6.8,<7",
    "yarl",
    "exceptiongroup>=1,<2 ; python_full_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/mosquito/aio-pika"
Source = "https://github.com/mosquito/aio-pika"
Tracker = "https://github.com/mosquito/aio-pika/issues"
Documentation = "https://docs.aio-pika.com/"

[dependency-groups]
dev = [
    "aiomisc>=17.5,<18",
    "aiomisc-pytest>=1.1.1,<2",
    "collective-checkdocs>=0.2,<0.3",
    "coverage>=6.5.0,<7",
    "coveralls>=3.3.1,<4",
    "mypy>=1,<2",
    "nox",
    "ruff>=0.9,<1",
    "pytest>=8.0,<9",
    "pytest-cov>=4.0.0,<5",
    "pytest-rst>=0.0,<0.1",
    "shortuuid>=1.0,<2",
    "sphinx",
    "sphinx-autobuild>=2021.3.14,<2022",
    "timeout-decorator>=0.5.0,<0.6",
    "setuptools>=69.0.3,<70",
    "autodoc",
    "furo",
    "sphinxcontrib-googleanalytics",
]
uvloop = ["uvloop>=0.21,<0.22"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = ["aio_pika"]
module-root = ""
source-include = ["tests/**"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "aio_pika",
    "tests",
    "docs/source/examples",
    "docs/source/rabbitmq-tutorial/examples/1-introduction",
    "docs/source/rabbitmq-tutorial/examples/2-work-queues",
    "docs/source/rabbitmq-tutorial/examples/3-publish-subscribe",
    "docs/source/rabbitmq-tutorial/examples/4-routing",
    "docs/source/rabbitmq-tutorial/examples/5-topics",
    "docs/source/rabbitmq-tutorial/examples/6-rpc",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
log_cli = true
addopts = "-p no:asyncio"
markers = [
    "asyncio: asyncio"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 80
exclude = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90"]
ignore = ["C901"]
